Se agregan servicios

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,14 @@
   
 
   
+
   
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body background="assets/images/img_5.jpg">
+<body >
   <app-root></app-root>
 
    <!-- JAVASCRIPT FILES -->
@@ -31,5 +35,7 @@
   <script src="assets/js/magnific-popup-options.js"></script>
   <script src="assets/js/scrollspy.min.js"></script>
   <script src="assets/js/custom.js"></script>
+  
+
 </body>
 </html>
