Se agrega google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,20 @@
   <link href="assets/css/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
   
-
-  
-
-  
-
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CT2Y958BMW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CT2Y958BMW');
+  </script>
+
 </head>
 <body >
   <app-root></app-root>
