--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PortalFonelli</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon"  type="image/x-icon" href="favicon.ico">
-  
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700;900&display=swap"
+    rel="stylesheet">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
-  
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -22,18 +24,19 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CT2Y958BMW"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-CT2Y958BMW');
   </script>
 
 </head>
-<body >
+
+<body>
   <app-root></app-root>
 
-   <!-- JAVASCRIPT FILES -->
-   <script src="assets/js/jquery.min.js"></script>
+  <!-- JAVASCRIPT FILES -->
+  <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/jquery.sticky.js"></script>
   <script src="assets/js/aos.js"></script>
@@ -43,4 +46,5 @@
   <script src="assets/js/custom.js"></script>
 
 </body>
+
 </html>
