Componente para mostrar Mapa de Distribuidores sobresalientes
Creación del componente y artefactos asociadas para mostrar en un mapa las ubicaciones de los distribuidores sobresalientes de Fonelli.
Se usa la API de google-maps

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CT2Y958BMW"></script>
+
+  <!-- API google-maps drendon 10.11.2025 -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd-dl6tQb8dhjdOoU-5c18rfvj4qP3rdY"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
